# Shutter-Tester-ST-2-Client-App

./: README.md
Shutter-Tester-ST-2-App/: .gitignore  .qmlls.ini  CMakeLists.txt  ConnectionDialog.cpp  ConnectionDialog.h  FirmwareUpdateDialog.cpp  FirmwareUpdateDialog.h  LightSetupDialog.cpp  LightSetupDialog.h  README.md  SerialController.cpp  SerialController.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.rc  version.rc.in
Shutter-Tester-ST-2-App/assets/: st2_fp_report_template.html
Shutter-Tester-ST-2-App/build_scripts/: build_debug_qtenv.bat  build_release_qtenv.bat
Shutter-Tester-ST-2-App/install/: create_payload.bat
Shutter-Tester-ST-2-App/install/NSIS/: Shutter Tester ST-2 App.nsi
serial API/docs/: serial API docs.md
serial API/tests/: api_test_demo.py  run api_test_demo.py.cmd
